# db-connector

./: Cargo.toml
examples/: 01-postgres.rs  02-sqlite.rs
migrations/postgres/: 20241201_create_table.sql
src/: lib.rs  main.rs
src/domain/: database.rs
src/service/: postgres.rs  sqlite.rs
src/utils/: constants.rs
