[package]
name = "db-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.78"
dotenvy = "0.15.7"
color-eyre = "0.6"
lazy_static = "1.4.0"
sqlx = { version = "0.8", features = ["postgres", "sqlite", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
thiserror = "2"